--- a/src/pages/character/[id].astro
+++ b/src/pages/character/[id].astro
@@ -1,7 +1,14 @@
 ---
 import "../../styles/buttons.css";
 import Layout from "@/layouts/Layout.astro";
+import ButtonPrimary from "@/components/ButtonPrimary.astro";
+
+// icons
 import ArrowIcon from "@/assets/arrow-down.svg";
+import UserIcon from "@/assets/user-info.svg";
+import LocationIcon from "@/assets/location.svg";
+import EpisodesIcon from "@/assets/episodes.svg";
+
 import { getCharacterById } from "@/services/getCharacter";
 
 const { id } = Astro.params;
@@ -59,19 +66,7 @@ if (!character) {
           class="bg-bg-card rounded-xl p-5 border border-border-card backdrop-blur-md"
         >
           <h4 class="text-xl font-bold mb-4 text-white flex items-center gap-2">
-            <svg
-              class="w-5 h-5 text-primary"
-              fill="none"
-              stroke="currentColor"
-              viewBox="0 0 24 24"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
-              ></path>
-            </svg>
+            <UserIcon class="w-5 aspect-square text-primary" />
             Información General
           </h4>
           <ul class="space-y-3">
@@ -104,24 +99,7 @@ if (!character) {
           class="bg-bg-card rounded-xl p-5 border border-border-card backdrop-blur-md"
         >
           <h4 class="text-xl font-bold mb-4 text-white flex items-center gap-2">
-            <svg
-              class="w-5 h-5 text-primary"
-              fill="none"
-              stroke="currentColor"
-              viewBox="0 0 24 24"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"
-              ></path>
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path>
-            </svg>
+            <LocationIcon class="w-5 aspect-square text-primary" />
             Ubicación
           </h4>
           <ul class="space-y-3">
@@ -146,19 +124,7 @@ if (!character) {
         class="bg-bg-card rounded-xl p-5 border border-border-card backdrop-blur-md"
       >
         <h4 class="text-xl font-bold mb-4 text-white flex items-center gap-2">
-          <svg
-            class="w-5 h-5 text-primary"
-            fill="none"
-            stroke="currentColor"
-            viewBox="0 0 24 24"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M7 4v16M17 4v16M3 8h4m10 0h4M3 12h18M3 16h4m10 0h4M4 20h16a1 1 0 001-1V5a1 1 0 00-1-1H4a1 1 0 00-1 1v14a1 1 0 001 1z"
-            ></path>
-          </svg>
+          <EpisodesIcon class="w-5 aspect-square text-primary" />
           Episodios
           <span
             class="ml-auto text-sm font-normal text-primary bg-primary/10 px-3 py-1 rounded-full"
@@ -186,17 +152,21 @@ if (!character) {
 
     <!-- Botón de regreso -->
     <div class="mt-8 flex justify-center">
-      <a
-        href="/"
-        class="btn-primary"
-        style="background-image: var(--color-gradient-btn); box-shadow: var(--shadow-inset-btn);"
-        aria-label="go-back-home"
-      >
+      <ButtonPrimary id="btn-back-page">
         <ArrowIcon class="w-4 h-4 block rotate-90" />
         Volver al inicio
-      </a>
+      </ButtonPrimary>
     </div>
   </main>
+
+  <script>
+    document.addEventListener("astro:page-load", () => {
+      const $backBtn = document.getElementById("btn-back-page");
+      $backBtn?.addEventListener("click", () => {
+        history.back();
+      });
+    });
+  </script>
   <style>
     h3 {
       font-size: clamp(2rem, 5vw, 4rem);
